2002-12-13  Earnie Boyd  <earnie@users.sf.net>

	* mirrors.shtml: Add gd.tuwien.ac.at.
	Remove ftp://ftp.franken.de as it wasn't upto date.
	Remove second ftp.franken.de as it wasn't MinGW.

2002-12-11  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for release candidate 
	binutils-2.13.90-20021209-1.tar.gz.

2002-12-10  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8.exe.
	Remove release candidate for MSYS.
	Update for release candidate gcj-3.2-20021210-1.tar.gz.
	Update for release candidate gcc-3.2.1-core-20021201-2.tar.gz.
	Add target="_nw" for all href jumping away from www.mingw.org.
	
2002-12-04  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8-rc-7.exe.

2002-12-02  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Add missing > .

2002-12-02  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8-rc-6.exe.
	Update for GCC-3.2.1-core-20021201-1.tar.gz release candidate.

2002-12-01  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8-rc-5.exe

2002-11-29  Earnie Boyd  <earnie@users.sf.net>

	* lists.shtml: Changes for SF archive vs Geocrawler.

2002-11-28  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8-rc-4.exe

2002-11-26  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for MSYS-1.0.8-rc-3.exe

2002-11-25  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update for w32api-2.1 release.

2002-11-05  Earnie Boyd  <earnie@users.sf.net>

	* mingwfaq.shmtl (faq-mingw32-gcc.exe): Add.
	(faq-mingw32-make.exe): Ditto.

2002-10-31  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Update MSYS release candidate.

2002-10-14  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Add verbiage about release candidates, experimental
	packages and updated releases.

2002-10-01  Luke Dunstan  <infidel@users.sf.net>

	* docs.shtml: Fix example C++ code to use std namespace.

2002-09-30  Earnie Boyd  <earnie@users.sf.net>
