@@ -1,4 +1,4 @@
-<!--$Id: bottombar.html,v 1.8 2002-01-26 18:11:58 stevedperkins Exp $-->
+<!--$Id: bottombar.html,v 1.9 2002-12-17 13:14:35 earnie Exp $-->
 <!-- =================================================================== -->
 <!--                                                                     -->
 <!--			Tabbed Navigation bar                            -->
@@ -8,17 +8,19 @@
 
 <p align="center">
 <small>
-<a href="index.shtml">Mingw Home</a>            |
-<a href="download.shtml">Download</a> |
-<a href="docs.shtml">Documentation</a>          |
-<a href="msys.shtml">MSYS</a>          |
-<a href="mirrors.shtml">Mirror Sites</a>        |
-<a href="links.shtml">Related Sites</a>         |
-<a href="ported.shtml">Ported Software</a>      |
-<a href="lists.shtml">Mailing Lists</a>         |
-<a href="licensing.shtml">Licensing Terms</a>   |
-<a href="who.shtml">Who are we?</a>             |
-<a href="news.shtml">News</a>                   |
-<a href="history.shtml">Project History</a> 
+<a href="index.shtml">Home</a>		    |
+<a href="licensing.shtml">Licensing</a>	    |
+<a href="lists.shtml">Lists</a>		    |
+<a href="bugs.shtml">Bugs</a>		    |
+<a href="msys.shtml">MSYS</a>		    |
+<a href="docs.shtml">Documentation</a>      |
+<a href="mingwfaq.shtml">FAQ</a>	    |
+<a href="links.shtml">Related</a>	    |
+<!--<a href="ported.shtml">Ports</a>	    |-->
+<!--<a href="who.shtml">Who are we?</a>         |-->
+<a href="news.shtml">News</a>               |
+<a href="history.shtml">History</a>	    |
+<a href="download.shtml">Download</a>	    |
+<a href="mirrors.shtml">Mirrors</a>	    |
 </small>
 </p>
