@@ -1,4 +1,4 @@
-<!--$Id: lsidebar.html,v 1.10 2002-05-06 14:31:03 earnie Exp $-->
+<!--$Id: lsidebar.html,v 1.11 2002-12-17 13:14:34 earnie Exp $-->
 <!-- ================================================================== -->
 <!--                                                                    -->
 <!--			     Left Sidebar                               -->
@@ -6,19 +6,20 @@
 
 <table border="0">
    <tr><td colspan="2"><a href="index.shtml">MinGW Home</a></td></tr>
-   <tr><td colspan="2"><a href="download.shtml">Download</a></td></tr>
+   <tr><td colspan="2"><a href="licensing.shtml">Licensing Terms</a></td></tr>
+   <tr><td colspan="2"><a href="lists.shtml">Mailing Lists</a></td></tr>
+   <tr><td colspan="2"><a href="bugs.shtml">Reporting Bugs</a></td></tr>
+   <tr><td colspan="2"><a href="msys.shtml">MSYS</a></td></tr>
    <tr><td colspan="2"><a href="docs.shtml">Documentation</a></td></tr>
    <tr><td><tt>&nbsp;</tt></td>
    <td><small><a href="mingwfaq.shtml">Frequently Asked Questions (FAQ)</a></small></td></tr>
-   <tr><td colspan="2"><a href="msys.shtml">MSYS</a></td></tr>
-   <tr><td colspan="2"><a href="mirrors.shtml">Mirror Sites</a></td></tr>
    <tr><td colspan="2"><a href="links.shtml">Related Sites</a></td></tr>
-   <tr><td colspan="2"><a href="ported.shtml">Ported Software</a></td></tr>
-   <tr><td colspan="2"><a href="lists.shtml">Mailing Lists</a></td></tr>
-   <tr><td colspan="2"><a href="licensing.shtml">Licensing Terms</a></td></tr>
-   <tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>
+   <!--<tr><td colspan="2"><a href="ported.shtml">Ported Software</a></td></tr>-->
+   <!--<tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>-->
    <tr><td colspan="2"><a href="news.shtml">News</a></td></tr>
    <tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
+   <tr><td colspan="2"><a href="download.shtml">Download</a></td></tr>
+   <tr><td colspan="2"><a href="mirrors.shtml">Mirror Sites</a></td></tr>
 
    <!-- Search box -->
    <tr><td colspan="2">
